test/error/multi_line_comment_1.result
Error: unterminated multi-line comment
  --> test/error/multi_line_comment_1.colgm:9:32
  | 
9 | func main() -> i32 { return 0; }
  |                                ^